Fix footer alignment.

--- a/css/site/_footer.scss
+++ b/css/site/_footer.scss
@@ -15,6 +15,9 @@
 	border-top: 1px solid rgba(109,110,113,0.25);
 	line-height: 1.35;
 }
+.home-page .site-footer {
+	border-top: 0;
+}
 
 .footer-block {
 	display: block;
@@ -181,7 +184,7 @@ footer input[type="submit"] {
 		vertical-align: top;
 		float: none;
 		width: 25%;
-		padding: 4% 2em;
+		padding: 4% 1.5em 4% 2.5em;
 		// margin: 2em 0;
 
 		&:first-child {
